--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/datatimepicker_es")
+    @Scripts.Render("~/bundles/dateformat")
+    
     
     <style>
         #contenedor
