--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialEdit.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialEdit.cshtml
@@ -120,8 +120,6 @@
                             }
                         }
                     }
-
-                   
                 </td>
 
                 @(tr2)
@@ -160,6 +158,7 @@
             $('#btnCancel').button().click(function () {
                 $("#DivToAppendPartialView").dialog("close");
             });
+            $("#btnSuppliers").button();
             $("#btnOk").button().click(function () {
                 $("#frmEdit").submit();
             });
@@ -168,7 +167,5 @@
                 if (this.value != this.value.replace(/[^0-9\.]/g, '')) {
                     this.value = this.value.replace(/[^0-9\.]/g, '');
                 }
-            });
-
-            
+            });            
 </script>
