--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Details.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Catalog/Details.cshtml
@@ -23,8 +23,9 @@
              {
                  <tr>
                      <td>@p.idProperty</td>
-                     <td >@p.name</td>                     
+                     <td >@p.Name</td>                     
                      <td >@p.TypeName</td>                     
+                     <td>@p.ViewUI</td>
                  </tr>
              }
          </table>
