--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/Index.cshtml
@@ -1,16 +1,14 @@
-﻿<script>
+﻿@model IEnumerable<Tenaris.Tamsa.HRM.Fat2.DataAccess.Models.Tool_Type>
+
+<script>
 
     $(document).ready(function () {
         $('div table')
              .button()
-             .click(function () {
-                 //alert(this.id);
-                 location.href = "@Url.Action("Create", "Tool")?idToolType=" + 1; //por el momento Puntas 
+             .click(function () {                 
+                 location.href = "@Url.Action("Create", "Tool")?idToolType=" + this.id; //por el momento Puntas 
              });
     });
-
-
-
 </script>
 <style>
     .ulmenu
@@ -42,61 +40,23 @@
 <div class="Tenaris">
 
 <ul class="ulmenu">
+    @foreach(var item in Model)
+    { 
     <li>
         <div class='mbtn'>
-            <table id="Mandriles">
+            <table id="@(item.idType)">
                 <tr>
                     <td>
                         <img src='images/Mandril_84891-8107635.jpg' width="50" height="50" alt="Mandriles" />
                     </td>
                     <td>
-                        Mandriles
+                        @(item.Name)
                     </td>
                 </tr>
             </table>
         </div>
     </li>
-    <li>
-        <div class='mbtn'>
-            <table id="Puntas">
-                <tr>
-                    <td>
-                        <img alt="Puntas" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
-                    </td>
-                    <td>
-                        Puntas
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </li>
-    <li>
-        <div class='mbtn'>
-            <table id="Lineales">
-                <tr>
-                    <td>
-                        <img src='images/Lineal_ebc5ed02-d273-4f5b-859c-9054fede53be.jpg' width="50" height="50" alt="Lineales" />
-                    </td>
-                    <td>
-                        Lineales
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </li>
-    <li>
-        <div class='mbtn'>
-            <table id="Cilindros">
-                <tr>
-                    <td>
-                        <img src='images/cilindros-de-acero-templado-industriales-en-taller-industria-54297583.jpg' width="50" height="50" alt="Cilindros" />
-                    </td>
-                    <td>
-                        Cilindros
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </li>
+    }
+    
 </ul>
 </div>
